# YoureMyCDN

./: .env  .gitignore  Cargo.toml  LICENSE.md  README.md
src/: lib.rs  main.rs
